--- a/src/html/inc/car-item.hbs
+++ b/src/html/inc/car-item.hbs
@@ -1,19 +1,15 @@
 {{#each this}}
 <div class="item{{#if @first}} active{{/if}}">
     <div class="row">
-        <div class="col-xs-8 col-xs-offset-2">
-            <div class="media">
-                <div class="media-left">
-                    <a href="#">
-                        <img class="media-object" src="{{profile_photo_url}}" alt="{{author_name}}">
-                    </a>
-                </div>
-                <div class="media-body">
-                    <p>{{text}}
-                        <span>{{author_name}}</span>
-                    </p>
-                </div>
-            </div>
+        <div class="col-md-2 col-xs-12 text-center">
+            <p><a href="#">
+                <img src="{{profile_photo_url}}" alt="{{author_name}}">
+            </a></p>
+        </div>
+        <div class="col-md-10 col-xs-12 item-body">
+            <p>{{text}}
+                <span>{{author_name}}</span>
+            </p>
         </div>
     </div>
 </div>
