Updated build. Started about page. Added page highlight on nav

--- a/src/html/pages/about.hbs
+++ b/src/html/pages/about.hbs
@@ -2,5 +2,32 @@
 layout: default.hbs
 title: "Movement Martial Arts - Best Sydney BJJ Kickboxing MMA Classes"
 pageid: "about"
----   
-
+--- 
+<section class="intro-banner">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12 hidden-sm hidden-xs text-center">
+                <h1>About Us</h1>
+            </div>
+        </div>
+    </div>
+</section>
+<section id="team" class="segment">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12 text-center">
+                <h2 class="lobster">Meet the team</h2></div>
+        </div>
+        <div class="row">
+            <div class="col-sm-4 text-center">
+                <video src="media/hussman.mp4" autoplay="autoplay" loop="loop"></video>
+            </div>
+            <div class="col-sm-4 text-center">
+                <video src="media/hussman.mp4" autoplay="autoplay" loop="loop"></video>
+            </div>
+            <div class="col-sm-4 text-center">
+                <video src="media/hussman.mp4" autoplay="autoplay" loop="loop"></video>
+            </div>
+        </div>
+    </div>
+</section>
