--- a/src/html/pages/index.hbs
+++ b/src/html/pages/index.hbs
@@ -3,7 +3,7 @@ layout: default.hbs
 title: "Movement Martial Arts - Best Sydney BJJ Kickboxing MMA Classes"
 pageid: "home"
 ---
-<section class="intro-banner {{pageid}}">
+<section class="intro-banner">
     <div class="container">
         <div class="row">
             <!-- <div class="col-md-5 line hidden-sm hidden-xs">
@@ -23,15 +23,12 @@ pageid: "home"
         </div>
         <div class="space-40"></div>
         <div class="row">
-            <!-- <div class="col-md-6 text-right">
-                <a href="#intro-text" role="button" class="btn btn-lg btn-theme-bg smoothLink">Who are we?</a>
-            </div> -->
             <div class="col-md-12 text-center">
                 <button type="button" class="btn btn-lg btn-theme-bg" data-toggle="modal" data-target="#sizzle">Video CTA</button>
             </div>
         </div>
     </div>
-    <a href="#intro-text" role="button" class="moreLink smoothLink"><span class="glyphicon glyphicon-chevron-down" aria-hidden="true"></span></a>
+    <a href="#intro-text" role="button" class="moreLink js-smooth-link"><span class="glyphicon glyphicon-chevron-down" aria-hidden="true"></span></a>
 </section>
 <section class="segment intro-wrap" id="intro-text">
     <div class="container">
