--- a/src/css/styles.less
+++ b/src/css/styles.less
@@ -27,6 +27,8 @@ FONTS
 
 @yell-lt: #FEDF22;
 @yell-md: #E6B426;
+@white-lt: #E8E8E8;
+
 body,
 html {
   height: 100%;
@@ -339,7 +341,7 @@ em {
 
 @media (min-width: 768px) and (max-width: 992px) {
   #collapseone .navbar-nav {
-    width:80%;
+    width: 80%;
   }
 }
 
@@ -476,15 +478,6 @@ em {
     font-weight: 100;
     color: #fff;
   }
-  i.fa {
-    font-size: 3em;
-  }
-  a[aria-expanded=true] .fa-chevron-down {
-    display: none;
-  }
-  a[aria-expanded=false] .fa-chevron-up {
-    display: none;
-  }
   .moreLink {
     position: absolute;
     bottom: 0;
@@ -492,6 +485,17 @@ em {
     left: 50%;
     /* position the left edge of the element at the middle of the parent */
     transform: translate(-50%, -50%);
+  }
+}
+
+
+/**** About Us ******/
+
+.about {
+  .intro-banner {
+    min-height: 60%;
+    background: rgb(0, 0, 0); /* Fallback for older browsers without RGBA-support */
+    background: rgba(0, 0, 0, 0.3);
   }
 }
 
@@ -592,7 +596,7 @@ em {
 }
 
 .intro-wrap {
-  background-color: #E8E8E8;
+  background-color: @white-lt;
   h2 {
     font-size: 3em;
   }
@@ -645,109 +649,10 @@ em {
 
 /*****************video player***********/
 
-#ytp {
+video {
   width: 100%;
-  max-width: 100%;
-  height: 500px;
-  display: table;
-  background-color: #444;
-  overflow-x: hidden;
-  overflow-y: hidden;
-  z-index: 1;
-  position: relative;
-  overflow-y: hidden !important;
-  overflow-x: hidden !important;
+  height: auto;
 }
-
-@media(max-width:320px) {
-  #ytp {
-    width: 320px;
-    overflow-y: hidden !important;
-    overflow-x: hidden !important;
-    height: 300px;
-  }
-  .video-container h1 {
-    font-size: 20px;
-  }
-}
-
-.video-container {
-  position: relative;
-  display: table-cell;
-  vertical-align: middle;
-  z-index: 3;
-}
-
-.video-container h1 {
-  margin-bottom: 20px;
-  color: #fff;
-  text-transform: uppercase;
-}
-
-.video-container p {
-  color: #fff;
-}
-
-.image-wrapper {
-  position: relative;
-  display: block;
-  margin-bottom: 30px;
-}
-
-.image-overlay {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  text-align: center;
-  opacity: 0;
-  background-color: rgba(0, 0, 0, 0.5);
-  transition: all 0.3s ease-in-out;
-  -webkit-transition: all 0.3s ease-in-out;
-  -moz-transition: all 0.3s ease-in-out;
-  -o-transition: all 0.3s ease-in-out;
-}
-
-.image-overlay p {
-  position: absolute;
-  top: 50%;
-  margin-top: -10px;
-  width: 100%;
-  text-align: center;
-  color: #fff;
-}
-
-.image-wrapper:hover .image-overlay {
-  opacity: 1;
-}
-
-.parallax {
-  background-position: 0 0;
-  background-repeat: no-repeat;
-  background-size: 100% auto;
-  width: 100%;
-  background-size: cover;
-  background-attachment: fixed;
-}
-
-
-/* .carousel {
-  margin-bottom: 50px;
-}
-
-.carousel-control {
-  top: 50%;
-  margin-top: -20px;
-  width: 60px;
-  height: 60px;
-  line-height: 60px;
-  text-align: center;
-}
-
-.carousel-control span i {
-  font-size: 44px;
-} */
 
 .carousel-control {
   color: @yell-lt;
@@ -929,7 +834,7 @@ input[type="color"]:focus,
   background-color: #262626;
   .carousel-inner > .item {
     padding: 0 120px 0 120px;
-}
+  }
   .item-body {
     p {
       overflow: hidden;
@@ -954,7 +859,7 @@ input[type="color"]:focus,
 
 .cta {
   padding: 50px 0;
-  background-color: #E8E8E8;
+  background-color: @white-lt;
 }
 
 .cta h4 {
@@ -981,11 +886,18 @@ input[type="color"]:focus,
 }
 
 
-/*
-Google Map
- */
+/******** Google Map *********/
 
 #map {
   height: 400px;
   width: 100%;
+}
+
+/********* About *********/
+
+#team {
+  background-color: @white-lt;
+  video {
+    height:250px;
+  }
 }
