Added a little content to about us

--- a/src/html/pages/about.hbs
+++ b/src/html/pages/about.hbs
@@ -6,7 +6,7 @@ pageid: "about"
 <section class="intro-banner">
     <div class="container">
         <div class="row">
-            <div class="col-md-12 hidden-sm hidden-xs text-center">
+            <div class="col-md-12 text-center">
                 <h1>About Us</h1>
             </div>
         </div>
@@ -16,17 +16,45 @@ pageid: "about"
     <div class="container">
         <div class="row">
             <div class="col-md-12 text-center">
-                <h2 class="lobster">Meet the team</h2></div>
+                <h2 class="lobster">Meet the team</h2>
+            </div>
         </div>
         <div class="row">
             <div class="col-sm-4 text-center">
-                <video src="media/hussman.mp4" autoplay="autoplay" loop="loop"></video>
+                <div class="team-box">
+                    <video src="media/hussman.mp4" autoplay="autoplay" loop="loop"></video>
+                </div>
+                <div class="team-desc">
+                    <h4>Andrew Husmann</h4>
+                    <em>Founder and Head Coach</em>
+                    <p>Andrew is an experienced and certified coach, and has spent many years coaching world class competitors in both childrens and adults BJJ, Muay Thai Kickboxing and MMA.</p>
+                    <p>He is currently a brown belt in BJJ, holds both Pan Pacific and national titles, and has competed at the World Championships.</p>
+                    <p>He holds a black shirt rank in Muay Thai Kickboxing with extensive training in Thailand, and has fought professionally.</p>
+                </div>
             </div>
             <div class="col-sm-4 text-center">
-                <video src="media/hussman.mp4" autoplay="autoplay" loop="loop"></video>
+                <div class="team-box">
+                    <video src="media/hussman.mp4" autoplay="autoplay" loop="loop"></video>
+                </div>
+                <div class="team-desc">
+                            <h4>Billy Sam</h4>
+                            <em>Founder and Head Coach</em>
+                            <p>Billy is an experienced and certified coach, most recently coaching kids and adults in Jiu Jitsu.</p>
+                            <p>He holds a Bachelor's Degree in Exercise and Sports Science, and Certificate 3 and 4 in Fitness.</p>
+                            <p>He is currently a brown belt in BJJ, holds national and Pan Pacific titles and has competed at the World Championships on numerous occasions.</p>
+                        </div>
             </div>
             <div class="col-sm-4 text-center">
-                <video src="media/hussman.mp4" autoplay="autoplay" loop="loop"></video>
+                <div class="team-box">
+                    <video src="media/hussman.mp4" autoplay="autoplay" loop="loop"></video>
+                </div>
+                <div class="team-desc">
+                            <h4>Wade Huang</h4>
+                            <em>Founder and Head Coach</em>
+                            <p>Wade is a reformed nine-to-fiver who has found his passion in Jiu Jitsu.</p> 
+                            <p>Wade is currently a brown belt in BJJ, has medalled in various competitions nationally and has competed at the World Championships on numerous occasions.</p>
+                            <p>Wade is an experienced and certified coach, teaching BJJ classes and assistant coaching in Muay Thai Kickboxing at Movement.</p>
+                        </div>
             </div>
         </div>
     </div>
