Added of these dropdown menus - are they a good idea? Time will tell

--- a/src/html/pages/index.hbs
+++ b/src/html/pages/index.hbs
@@ -35,7 +35,7 @@ pageid: "home"
         <div class="row row-flex row-flex-wrap">
             <div class="col-md-4">
                 <div class="well">
-                    <h2>Who is<br><span class="lobster">Movement?</h2>
+                    <h2>Who is<br><span class="basker">Movement?</h2>
                     <p class="text-center"><img src="img/boys.jpg" class="img-responsive"></p>
                     <p>Movement Martial Arts is a martial arts gym and club based in Sydney which provides classes and coaching specialising in Brazilian Jiu Jitsu (BJJ), Muay Thai Kickboxing, and Mixed Martial Arts (MMA). We offer classes and training to suit ages 6+, for people of all sizes and skill levels.
                     </p>
@@ -46,7 +46,7 @@ pageid: "home"
             </div>
             <div class="col-md-4">
                 <div class="well">
-                    <h2>What is<br><span class="diplomata">BJJ?</span></h2>
+                    <h2>What is<br><span class="basker">BJJ?</span></h2>
                     <p class="text-center"><img src="img/triangle.jpg" class="img-responsive"></p>
                     <p>BJJ is a combat sport and a self-defence system that focuses on grappling and ground fighting, emphasising position, control and submissions such as chokes, arm locks and leg locks.</p>
                     <p>Our head coaches have many years of experience in both coaching and competition, so come join our BJJ classes!</p>
@@ -56,7 +56,7 @@ pageid: "home"
             </div>
             <div class="col-md-4">
                 <div class="well">
-                    <h2>What is<br><span class="luckyguy">Muay Thai?</span></h2>
+                    <h2>What is<br><span class="basker">Muay Thai?</span></h2>
                     <p class="text-center"><img src="img/kick.jpg" class="img-responsive"></p>
                     <p>Muay Thai is a style of kickboxing that originates from Thailand and uses the whole body. It is referred to as the art of 8 limbs, incorporating hands, elbows, feet, knees and grappling into a comprehensive and effective striking based martial art.</p>
                     <p>Call to action blurb</p>
