--- a/src/html/partials/global-nav.hbs
+++ b/src/html/partials/global-nav.hbs
@@ -11,7 +11,7 @@
             <!-- TO-DO popovers for icons? -->
             <li><a href="tel:(02) 9887 1230"><i class="glyphicon glyphicon-phone-alt"></i></a></li>
             <li><a href="#map"><i class="glyphicon glyphicon-map-marker"></i></a></li>
-            <li><a href="#freetrial" data-toggle="modal" data-target="#freetrial"><i class="glyphicon glyphicon-gift"></i></a></li>
+<!--             <li><a href="#freetrial" data-toggle="modal" data-target="#freetrial"><i class="glyphicon glyphicon-gift"></i></a></li> -->
         </ul>
     </div>
     <div id="collapseone" class="navbar-collapse collapse">
