Updated nav and styles. Changed kids photo. Juggled layout of homepage

--- a/src/css/styles.less
+++ b/src/css/styles.less
@@ -143,6 +143,7 @@ em {
   font-weight: 400;
 }
 
+.img-responsive { width:100%; }
 
 /*
  * Row with equal height columns
@@ -301,6 +302,10 @@ em {
       }
     }
   }
+}
+
+.navbar-fixed-top .navbar-collapse, .navbar-fixed-bottom .navbar-collapse {
+     max-height: none;
 }
 
 .navbar-inverse .navbar-brand {
