--- a/src/html/pages/index.hbs
+++ b/src/html/pages/index.hbs
@@ -21,21 +21,21 @@ pageid: "home"
                 <h1>Movement <small>Martial Arts</small></h1>
             </div>
         </div>
-        <div class="space-40"></div>
+        {{!-- <div class="space-40"></div>
         <div class="row">
             <div class="col-md-12 text-center">
                 <button type="button" class="btn btn-lg btn-theme-bg" data-toggle="modal" data-target="#sizzle">Video CTA</button>
             </div>
-        </div>
+        </div> --}}
     </div>
-    <a href="#intro-text" role="button" class="moreLink js-smooth-link"><span class="glyphicon glyphicon-chevron-down" aria-hidden="true"></span></a>
+    <a href="#intro-text" role="button" class="moreLink js-smooth-link text-center">who are we? <br> <span class="glyphicon glyphicon-chevron-down" aria-hidden="true"></span></a>
 </section>
 <section class="segment intro-wrap" id="intro-text">
     <div class="container">
         <div class="row row-flex row-flex-wrap">
-            <div class="col-md-4">
+            <div class="col-md-12">
                 <div class="well">
-                    <h2>Who is<br><span class="basker">Movement?</h2>
+                    <h2>Who is <span class="basker">Movement?</h2>
                     <p class="text-center"><img src="img/boys.jpg" class="img-responsive"></p>
                     <p>Movement Martial Arts is a martial arts gym and club based in Sydney which provides classes and coaching specialising in Brazilian Jiu Jitsu (BJJ), Muay Thai Kickboxing, and Mixed Martial Arts (MMA). We offer classes and training to suit ages 6+, for people of all sizes and skill levels.
                     </p>
@@ -44,9 +44,11 @@ pageid: "home"
                     <p><a href="#portfolio" class="btn btn-lg btn-theme-bg">Claim your free trial!</i></a></p>
                 </div>
             </div>
+        </div>
+        <div class="row row-flex row-flex-wrap">
             <div class="col-md-4">
                 <div class="well">
-                    <h2>What is<br><span class="basker">BJJ?</span></h2>
+                    <h2>BJJ</h2>
                     <p class="text-center"><img src="img/triangle.jpg" class="img-responsive"></p>
                     <p>BJJ is a combat sport and a self-defence system that focuses on grappling and ground fighting, emphasising position, control and submissions such as chokes, arm locks and leg locks.</p>
                     <p>Our head coaches have many years of experience in both coaching and competition, so come join our BJJ classes!</p>
@@ -56,11 +58,21 @@ pageid: "home"
             </div>
             <div class="col-md-4">
                 <div class="well">
-                    <h2>What is<br><span class="basker">Muay Thai?</span></h2>
+                    <h2>Muay Thai</h2>
                     <p class="text-center"><img src="img/kick.jpg" class="img-responsive"></p>
                     <p>Muay Thai is a style of kickboxing that originates from Thailand and uses the whole body. It is referred to as the art of 8 limbs, incorporating hands, elbows, feet, knees and grappling into a comprehensive and effective striking based martial art.</p>
                     <p>Call to action blurb</p>
                     <p><a href="#testimonials" class="btn btn-lg btn-theme-bg">Why learn Muay Thai?</a></p>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="well">
+                    <h2>Kids</h2>
+                    <p class="text-center"><img src="img/kids.jpg" class="img-responsive"></p>
+                    <p>BJJ is a combat sport and a self-defence system that focuses on grappling and ground fighting, emphasising position, control and submissions such as chokes, arm locks and leg locks.</p>
+                    <p>Our head coaches have many years of experience in both coaching and competition, so come join our BJJ classes!</p>
+                    <div class="space-20"></div>
+                    <p><a href="#portfolio" class="btn btn-lg btn-theme-bg">What makes BJJ special?</a></p>
                 </div>
             </div>
         </div>
