--- a/src/html/pages/about.hbs
+++ b/src/html/pages/about.hbs
@@ -20,9 +20,10 @@ pageid: "about"
             </div>
         </div>
         <div class="row">
-            <div class="col-sm-4 text-center">
+            <div class="col-sm-4">
                 <div class="team-box">
-                    <video src="media/hussman.mp4" autoplay="autoplay" loop="loop"></video>
+                    <!-- <video src="media/hussman.mp4" autoplay="autoplay" loop="loop"></video> -->
+                    <img src="img/team-andrew.jpg">
                 </div>
                 <div class="team-desc">
                     <h4>Andrew Husmann</h4>
@@ -30,31 +31,37 @@ pageid: "about"
                     <p>Andrew is an experienced and certified coach, and has spent many years coaching world class competitors in both childrens and adults BJJ, Muay Thai Kickboxing and MMA.</p>
                     <p>He is currently a brown belt in BJJ, holds both Pan Pacific and national titles, and has competed at the World Championships.</p>
                     <p>He holds a black shirt rank in Muay Thai Kickboxing with extensive training in Thailand, and has fought professionally.</p>
+                    <ul class="list-inline team-contact text-center">
+                        <li><a href="#"><i class="glyphicon glyphicon-phone"></i></a></li>
+                        <li><a href="#"><i class="glyphicon glyphicon-envelope"></i></a></li>
+                    </ul>
                 </div>
             </div>
-            <div class="col-sm-4 text-center">
+            <div class="col-sm-4">
                 <div class="team-box">
-                    <video src="media/hussman.mp4" autoplay="autoplay" loop="loop"></video>
+                    <!-- <video src="media/hussman.mp4" autoplay="autoplay" loop="loop"></video> -->
+                    <img src="img/team-billy.jpg">
                 </div>
                 <div class="team-desc">
-                            <h4>Billy Sam</h4>
-                            <em>Founder and Head Coach</em>
-                            <p>Billy is an experienced and certified coach, most recently coaching kids and adults in Jiu Jitsu.</p>
-                            <p>He holds a Bachelor's Degree in Exercise and Sports Science, and Certificate 3 and 4 in Fitness.</p>
-                            <p>He is currently a brown belt in BJJ, holds national and Pan Pacific titles and has competed at the World Championships on numerous occasions.</p>
-                        </div>
+                    <h4>Billy Sam</h4>
+                    <em>Founder and Head Coach</em>
+                    <p>Billy is an experienced and certified coach, most recently coaching kids and adults in Jiu Jitsu.</p>
+                    <p>He holds a Bachelor's Degree in Exercise and Sports Science, and Certificate 3 and 4 in Fitness.</p>
+                    <p>He is currently a brown belt in BJJ, holds national and Pan Pacific titles and has competed at the World Championships on numerous occasions.</p>
+                </div>
             </div>
-            <div class="col-sm-4 text-center">
+            <div class="col-sm-4">
                 <div class="team-box">
-                    <video src="media/hussman.mp4" autoplay="autoplay" loop="loop"></video>
+                    <!-- <video src="media/hussman.mp4" autoplay="autoplay" loop="loop"></video> -->
+                    <img src="img/team-wade.jpg">
                 </div>
                 <div class="team-desc">
-                            <h4>Wade Huang</h4>
-                            <em>Founder and Head Coach</em>
-                            <p>Wade is a reformed nine-to-fiver who has found his passion in Jiu Jitsu.</p> 
-                            <p>Wade is currently a brown belt in BJJ, has medalled in various competitions nationally and has competed at the World Championships on numerous occasions.</p>
-                            <p>Wade is an experienced and certified coach, teaching BJJ classes and assistant coaching in Muay Thai Kickboxing at Movement.</p>
-                        </div>
+                    <h4>Wade Huang</h4>
+                    <em>Founder and Head Coach</em>
+                    <p>Wade is a reformed nine-to-fiver who has found his passion in Jiu Jitsu.</p>
+                    <p>Wade is currently a brown belt in BJJ, has medalled in various competitions nationally and has competed at the World Championships on numerous occasions.</p>
+                    <p>Wade is an experienced and certified coach, teaching BJJ classes and coaching in Muay Thai Kickboxing at Movement.</p>
+                </div>
             </div>
         </div>
     </div>
