--- a/src/html/partials/footer.hbs
+++ b/src/html/partials/footer.hbs
@@ -7,6 +7,8 @@
                     <h3 class="widget-title">Contact Us</h3>
                     <p>Building 1, 35 Waterloo Road, Macquarie Park 2113</p>
                     <p>(02) 9887 1230</p>
+                    <p><a href="contact.html">Enquire more</a></p>
+                    <p><a href="" data-toggle="modal" data-target="#sizzle">Help me get here</a></p>
                 </div>
                 <div id="map"></div>
             </div>
