--- a/src/html/pages/index.hbs
+++ b/src/html/pages/index.hbs
@@ -28,27 +28,38 @@ pageid: "home"
             </div>
         </div> --}}
     </div>
-    <a href="#intro-text" role="button" class="moreLink js-smooth-link text-center">who are we? <br> <span class="glyphicon glyphicon-chevron-down" aria-hidden="true"></span></a>
+    <a href="#intro-text" role="button" class="moreLink js-smooth-link text-center">Meet the family <br> <span class="glyphicon glyphicon-chevron-down" aria-hidden="true"></span></a>
 </section>
 <section class="segment intro-wrap" id="intro-text">
     <div class="container">
-        <div class="row row-flex row-flex-wrap">
+        <!-- <div class="row row-flex row-flex-wrap">
             <div class="col-md-12">
                 <div class="well">
-                    <h2>Who is <span class="basker">Movement?</h2>
                     <p class="text-center"><img src="img/boys.jpg" class="img-responsive"></p>
+                    <h2>Who is <span class="basker">Movement?</h2>
                     <p>Movement Martial Arts is a martial arts gym and club based in Sydney which provides classes and coaching specialising in Brazilian Jiu Jitsu (BJJ), Muay Thai Kickboxing, and Mixed Martial Arts (MMA). We offer classes and training to suit ages 6+, for people of all sizes and skill levels.
                     </p>
-                    <p>Come join our family...</p>
+                    <p>Come join the family...</p>
                     <div class="space-20"></div>
                     <p><a href="#portfolio" class="btn btn-lg btn-theme-bg">Claim your free trial!</i></a></p>
                 </div>
             </div>
-        </div>
+        </div> -->
         <div class="row row-flex row-flex-wrap">
             <div class="col-md-4">
                 <div class="well">
-                    <h2>BJJ</h2>
+                    <h2 class="lobster text-center">Who are we?</h2>
+                    <p class="text-center"><img src="img/boys.jpg" class="img-responsive"></p>
+                    <p>Movement Martial Arts is a martial arts gym and club based in Sydney which provides classes and coaching specialising in Brazilian Jiu Jitsu (BJJ), Muay Thai Kickboxing, and Mixed Martial Arts (MMA). We offer classes and training to suit ages 6+, for people of all sizes and skill levels.
+                    </p>
+                    <p>Find out more about <a href="">our culture</a></p><!-- links can be inline, no need to refer to navigation -->
+                    <div class="space-20"></div>
+                    <p><a href="#portfolio" class="btn btn-lg btn-theme-bg">Want a free trial?<!-- Claim your free trial! --></a></p><!-- http://blog.wishpond.com/post/103290853633/the-25-best-words-to-use-in-your-call-to-action - Make your call-to-action convey urgency -->
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="well">
+                    <h2 class="lobster text-center">BJJ</h2>
                     <p class="text-center"><img src="img/triangle.jpg" class="img-responsive"></p>
                     <p>BJJ is a combat sport and a self-defence system that focuses on grappling and ground fighting, emphasising position, control and submissions such as chokes, arm locks and leg locks.</p>
                     <p>Our head coaches have many years of experience in both coaching and competition, so come join our BJJ classes!</p>
@@ -58,14 +69,14 @@ pageid: "home"
             </div>
             <div class="col-md-4">
                 <div class="well">
-                    <h2>Muay Thai</h2>
+                    <h2 class="lobster text-center">Muay Thai</h2>
                     <p class="text-center"><img src="img/kick.jpg" class="img-responsive"></p>
                     <p>Muay Thai is a style of kickboxing that originates from Thailand and uses the whole body. It is referred to as the art of 8 limbs, incorporating hands, elbows, feet, knees and grappling into a comprehensive and effective striking based martial art.</p>
-                    <p>Call to action blurb</p>
+                    <p>Come along to a class and see for yourself why this one is our most popular.</p>
                     <p><a href="#testimonials" class="btn btn-lg btn-theme-bg">Why learn Muay Thai?</a></p>
                 </div>
             </div>
-            <div class="col-md-4">
+            <!-- <div class="col-md-4">
                 <div class="well">
                     <h2>Kids</h2>
                     <p class="text-center"><img src="img/kids.jpg" class="img-responsive"></p>
@@ -74,7 +85,7 @@ pageid: "home"
                     <div class="space-20"></div>
                     <p><a href="#portfolio" class="btn btn-lg btn-theme-bg">What makes BJJ special?</a></p>
                 </div>
-            </div>
+            </div> -->
         </div>
     </div>
 </section>
@@ -101,10 +112,10 @@ pageid: "home"
     <div class="container">
         <div class="row">
             <div class="col-sm-8 text-center">
-                <h4>Ready to call to action?</h4>
+                <h4>Keen to try out some classes?</h4>
             </div>
             <div class="col-sm-4 text-center">
-                <a href="#" class="btn btn-lg btn-theme-bg" data-toggle="modal" data-target="#freetrial">Claim Free Trial</a>
+                <a href="#" class="btn btn-lg btn-theme-bg" data-toggle="modal" data-target="#freetrial">1 week free trial</a>
             </div>
         </div>
     </div>
