Updated temporary nav. Updated some default font sizes.

--- a/src/html/pages/about.hbs
+++ b/src/html/pages/about.hbs
@@ -17,32 +17,31 @@ pageid: "about"
         <div class="row">
             <div class="col-md-12 text-center">
                 <h2 class="lobster">Meet the team</h2>
+                <p>Meet the 3 guys who kicked it all off</p>
             </div>
         </div>
-        <div class="row">
-            <div class="col-sm-4">
-                <div class="team-box">
-                    <!-- <video src="media/hussman.mp4" autoplay="autoplay" loop="loop"></video> -->
-                    <img src="img/team-andrew.jpg">
-                </div>
-                <div class="team-desc">
+        <div class="row row-flex row-flex-wrap">
+            <div class="col-md-4">
+                <div class="well">
+                    <p class="text-center"><img src="img/team-andrew.jpg" class="img-responsive"></p>
+                    <ul class="list-inline team-contact">
+                        <li><a href="#"><i class="glyphicon glyphicon-phone"></i></a></li>
+                        <li><a href="#"><i class="glyphicon glyphicon-envelope"></i></a></li>
+                    </ul>
                     <h4>Andrew Husmann</h4>
                     <em>Founder and Head Coach</em>
                     <p>Andrew is an experienced and certified coach, and has spent many years coaching world class competitors in both childrens and adults BJJ, Muay Thai Kickboxing and MMA.</p>
                     <p>He is currently a brown belt in BJJ, holds both Pan Pacific and national titles, and has competed at the World Championships.</p>
                     <p>He holds a black shirt rank in Muay Thai Kickboxing with extensive training in Thailand, and has fought professionally.</p>
-                    <ul class="list-inline team-contact text-center">
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="well">
+                    <p class="text-center"><img src="img/team-billy.jpg" class="img-responsive"></p>
+                    <ul class="list-inline team-contact">
                         <li><a href="#"><i class="glyphicon glyphicon-phone"></i></a></li>
                         <li><a href="#"><i class="glyphicon glyphicon-envelope"></i></a></li>
                     </ul>
-                </div>
-            </div>
-            <div class="col-sm-4">
-                <div class="team-box">
-                    <!-- <video src="media/hussman.mp4" autoplay="autoplay" loop="loop"></video> -->
-                    <img src="img/team-billy.jpg">
-                </div>
-                <div class="team-desc">
                     <h4>Billy Sam</h4>
                     <em>Founder and Head Coach</em>
                     <p>Billy is an experienced and certified coach, most recently coaching kids and adults in Jiu Jitsu.</p>
@@ -50,12 +49,13 @@ pageid: "about"
                     <p>He is currently a brown belt in BJJ, holds national and Pan Pacific titles and has competed at the World Championships on numerous occasions.</p>
                 </div>
             </div>
-            <div class="col-sm-4">
-                <div class="team-box">
-                    <!-- <video src="media/hussman.mp4" autoplay="autoplay" loop="loop"></video> -->
-                    <img src="img/team-wade.jpg">
-                </div>
-                <div class="team-desc">
+            <div class="col-md-4">
+                <div class="well">
+                    <p class="text-center"><img src="img/team-wade.jpg" class="img-responsive"></p>
+                    <ul class="list-inline team-contact">
+                        <li><a href="#"><i class="glyphicon glyphicon-phone"></i></a></li>
+                        <li><a href="#"><i class="glyphicon glyphicon-envelope"></i></a></li>
+                    </ul>
                     <h4>Wade Huang</h4>
                     <em>Founder and Head Coach</em>
                     <p>Wade is a reformed nine-to-fiver who has found his passion in Jiu Jitsu.</p>
