--- a/src/html/pages/index.hbs
+++ b/src/html/pages/index.hbs
@@ -28,7 +28,7 @@ pageid: "home"
             </div>
         </div> --}}
     </div>
-    <a href="#intro-text" role="button" class="moreLink js-smooth-link text-center">Meet the family <br> <span class="glyphicon glyphicon-chevron-down" aria-hidden="true"></span></a>
+    <a href="#intro-text" role="button" class="btn btn-theme-bg moreLink js-smooth-link text-center">Meet the family<!--  <br> <span class="glyphicon glyphicon-chevron-down" aria-hidden="true"> --></span></a>
 </section>
 <section class="segment intro-wrap" id="intro-text">
     <div class="container">
