--- a/src/css/styles.less
+++ b/src/css/styles.less
@@ -18,7 +18,6 @@ FONTS
 @yell-lt: #FEDF22;
 @yell-md: #E6B426;
 @white-lt: #E8E8E8;
-
 body,
 html {
   height: 100%;
@@ -26,7 +25,7 @@ html {
 
 body {
   font-family: 'Lato', sans-serif;
-  font-size: 14px;
+  font-size: 18px;
   font-style: normal;
   -webkit-font-smoothing: antialiased;
   padding-top: 20px;
@@ -379,7 +378,7 @@ em {
         text-align: left;
         width: auto;
         a {
-          font-size: 1.25em;
+          font-size: 1.1em;
         }
       }
     }
@@ -481,7 +480,7 @@ em {
     text-shadow: rgba(0, 0, 0, .2) 2px 6px 5px, rgba(255, 255, 255, .4) 0 -4px 30px;
     line-height: 64px;
     padding: 5% 5px 0 5px;
-    font-size: 6em;
+    font-size: 4.9em;
   }
   .container {
     position: absolute;
@@ -496,8 +495,8 @@ em {
   }
   .moreLink {
     position: absolute;
-    bottom: 0;
-    font-size: 2em;
+    bottom: 15px;
+    font-size: 1em;
     left: 50%;
     /* position the left edge of the element at the middle of the parent */
     transform: translate(-50%, -50%);
@@ -583,7 +582,6 @@ em {
 /***intro-text*****/
 
 #intro-text {
-  font-size: 1.3em;
   opacity: .95;
   .row-flex {
     .col-md-4,
@@ -616,7 +614,7 @@ em {
 .intro-wrap {
   background-color: @white-lt;
   h2 {
-    font-size: 3em;
+    font-size: 2.5em;
   }
   .btn {
     white-space: normal;
@@ -919,15 +917,14 @@ input[type="color"]:focus,
   video {
     height: 250px;
   }
-}
-
-.team-desc {
-  padding: 25px;
-  background-color: #f5f5f5;
-  em {
-    color: yell-md;
-  }
-  .team-contact {
-    font-size: 2em;
+  .well {
+    padding: 25px;
+    background-color: #f5f5f5;
+    em {
+      color: yell-md;
+    }
+    .team-contact {
+      font-size: 2em;
+    }
   }
 }
