--- a/src/css/styles.less
+++ b/src/css/styles.less
@@ -507,6 +507,9 @@ em {
 /**** About Us ******/
 
 .about {
+  h1 {
+    padding-top: 0;
+  }
   .intro-banner {
     min-height: 60%;
     background: rgb(0, 0, 0);
@@ -519,14 +522,6 @@ em {
   .intro-banner {
     .container {
       width: 100%
-    }
-  }
-}
-
-.about {
-  .intro-banner {
-    h1 {
-      padding-top: 0;
     }
   }
 }
@@ -914,17 +909,104 @@ input[type="color"]:focus,
 
 #team {
   background-color: @white-lt;
+  h4 {
+    margin-bottom: 0;
+  }
   video {
     height: 250px;
+  }
+  a {
+    color: #777;
+    &:hover {
+      color: @yell-lt;
+    }
   }
   .well {
     padding: 25px;
     background-color: #f5f5f5;
+    border-radius: 10px;
     em {
-      color: yell-md;
+      color: @yell-md;
+      margin-bottom: 10px;
+      display: block;
     }
     .team-contact {
-      font-size: 2em;
+      font-size: 1.5em;
     }
+  }
+}
+
+
+/********* Timetable ********/
+
+.timetable {
+  .list-group-item {
+    background-color: #f5f5f5;
+  }
+  .intro-banner {
+    min-height: 60%;
+    background: rgb(0, 0, 0);
+    /* Fallback for older browsers without RGBA-support */
+    background: rgba(0, 0, 0, 0.3);
+  }
+  #timetables {
+    background-color: @white-lt;
+    .nav>li>a:focus,
+    .nav>li>a:hover {
+      text-decoration: none;
+      background-color: #000;
+      color: #FEDF22;
+    }
+    .nav-pills>li.active>a,
+    .nav-pills>li.active>a:focus,
+    .nav-pills>li.active>a:hover {
+      color: #FEDF22;
+      background-color: #333;
+    }
+    .tables {
+      background-color: rgba(0, 0, 0, 0.3);
+      margin-bottom: 20px;
+      .class-active {
+        background-color: #FEDF22;
+        color: #000;
+      }
+      table td {
+        width: 12%;
+        vertical-align: middle;
+      }
+    }
+    .timetable-title {
+      margin-bottom: 30px;
+    }
+    .timetable-title a {
+      text-transform: uppercase;
+      font-weight: 700;
+      font-size: 18px;
+      letter-spacing: 1px;
+      color: #FAFAFA;
+    }
+    table thead th {
+      text-transform: capitalize;
+    }
+    @media (min-width: 767px) {
+      .day-select {
+        display: none !important;
+      }
+    }
+  }
+}
+
+
+/********* Kids ********/
+
+.kids {
+  .intro-banner {
+    min-height: 60%;
+    background: rgb(0, 0, 0);
+    /* Fallback for older browsers without RGBA-support */
+    background: rgba(0, 0, 0, 0.3);
+  }
+  #kids {
+  	background-color: @white-lt;
   }
 }
