Updated timetable page. fixed up smooth scroll. Updated phone link

--- a/src/css/styles.less
+++ b/src/css/styles.less
@@ -465,6 +465,26 @@ em {
 }
 
 
+/******** Lists *************/
+
+.list-unstyled {
+  padding-left: 0;
+  list-style: none;
+}
+
+.list-chevron {
+  li {
+    background: url(../img/bullet.png) no-repeat 4px 15px;
+    padding-left: 18px;
+    padding-top: 8px;
+    padding-bottom: 8px;
+    a {
+    	color: #999;
+    }
+  }
+}
+
+
 /*============================*/
 
 .intro-banner {
@@ -1007,6 +1027,6 @@ input[type="color"]:focus,
     background: rgba(0, 0, 0, 0.3);
   }
   #kids {
-  	background-color: @white-lt;
+    background-color: @white-lt;
   }
 }
