--- a/src/html/layouts/default.hbs
+++ b/src/html/layouts/default.hbs
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         {{> meta default-meta}}
         <title>{{title}}</title>
@@ -23,7 +23,7 @@
         <![endif]-->
     </head>
     <body class="{{pageid}}">
-        
+
         <!--navigation-->
         <!-- Fixed navbar -->
         {{> header }}
@@ -36,7 +36,7 @@
         <!--footer start-->
         {{> footer }}
         <!--footer end-->
-        
+
         <!--must need plugin jquery-->
         <!--bootstrap js plugin-->
         <!--easing plugin for smooth scroll-->
