--- a/src/html/pages/timetable.hbs
+++ b/src/html/pages/timetable.hbs
@@ -17,11 +17,11 @@ pageid: "timetable"
         <div class="row">
             <div class="col-md-4">
                 <p>Check out our class schedules below:</p>
-                <div class="list-group">
-                    <a href="#table-bjj" class="list-group-item">BJJ</a>
-                    <a href="#table-mma" class="list-group-item">Muay Thai Kickboxing &amp; MMA</a>
-                    <a href="#table-kids" class="list-group-item">Kids Classes (Ages 6 - 14)</a>
-                </div>
+                <ul class="list-unstyled list-chevron">
+				    <li role="presentation"><a href="#table-bjj" class="js-smooth-link">BJJ</a></li>
+				    <li role="presentation"><a href="#table-mma">Muay Thai Kickboxing &amp; MMA</a></li>
+				    <li role="presentation"><a href="#table-kids">Kids Classes (Ages 6 - 14)</a></li>
+				</ul>
             </div>
         </div>
         <div class="row">
