--- a/src/html/layouts/default.hbs
+++ b/src/html/layouts/default.hbs
@@ -37,15 +37,8 @@
         {{> footer }}
         <!--footer end-->
 
-        <!--must need plugin jquery-->
-        <!--bootstrap js plugin-->
-        <!--easing plugin for smooth scroll-->
-        <!--digit countdown plugin-->
-        <!--digit countdown plugin-->
-        <!--on scroll animation-->
-        <!--owl carousel slider-->
-        <!--popup js-->
-        <!--customizable plugin edit according to your needs-->
+		<!-- Modals - placed here to avoid position relative weirdness -->
+		{{> modals}}
         <script src="libs/js/libs.js"></script>
         <!--script src="js/script.js"></script-->
         <script src="js/script.js"></script>
