--- a/src/html/pages/timetable.hbs
+++ b/src/html/pages/timetable.hbs
@@ -18,15 +18,15 @@ pageid: "timetable"
             <div class="col-md-4">
                 <p>Check out our class schedules below:</p>
                 <ul class="list-unstyled list-chevron">
-				    <li role="presentation"><a href="#table-bjj" class="js-smooth-link">BJJ</a></li>
-				    <li role="presentation"><a href="#table-mma">Muay Thai Kickboxing &amp; MMA</a></li>
-				    <li role="presentation"><a href="#table-kids">Kids Classes (Ages 6 - 14)</a></li>
+				    <li role="presentation"><a href="#header-bjj" class="js-smooth-link">BJJ</a></li>
+				    <li role="presentation"><a href="#header-mma" class="js-smooth-link">Muay Thai Kickboxing &amp; MMA</a></li>
+				    <li role="presentation"><a href="#header-kids" class="js-smooth-link">Kids Classes (Ages 6 - 14)</a></li>
 				</ul>
             </div>
         </div>
         <div class="row">
             <div class="col-md-12 text-center">
-            	<h2 class="lobster">Brazilian Jiu Jitsu</h2>
+            	<h2 id="header-bjj" class="lobster">Brazilian Jiu Jitsu</h2>
                 <div class="tables">
                     <div class="table-responsive" id="table-bjj">
                         <table class="table table-bordered">
@@ -149,7 +149,7 @@ pageid: "timetable"
         </div>
         <div class="row">
             <div class="col-md-12 text-center">
-            	<h2 class="lobster">Muay Thai Kickboxing</h2>
+            	<h2 id="header-mma" class="lobster">Muay Thai Kickboxing</h2>
                 <div class="tables">
                     <div class="table-responsive" id="table-mma">
                         <table class="table table-bordered">
@@ -283,7 +283,7 @@ pageid: "timetable"
         </div>
         <div class="row">
             <div class="col-md-12 text-center">
-            	<h2 class="lobster">Kids Classes</h2>
+            	<h2 id="header-kids" class="lobster">Kids Classes</h2>
                 <div class="tables">
                     <div class="table-responsive" id="table-kids">
                         <table class="table table-bordered">
