--- a/src/html/partials/modals.hbs
+++ b/src/html/partials/modals.hbs
@@ -4,7 +4,7 @@
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">×</span><span class="sr-only">Close</span></button>
-                <h4 class="modal-title" id="myModalLabel">Sizzle reel header</h4>
+                <h4 class="modal-title" id="myModalLabel">How to find Movement</h4>
             </div>
             <div class="modal-body">
                 <div class="embed-responsive embed-responsive-16by9">
@@ -22,7 +22,7 @@
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">×</span><span class="sr-only">Close</span></button>
-                <h4 class="modal-title" id="myModalLabel">Free trial CTA</h4>
+                <h4 class="modal-title" id="myModalLabel">Claim your free trial today!</h4>
             </div>
             <div class="modal-body">
                 <form name="sentMessage" class="contact-form" id="contactForm" method="post" novalidate>
@@ -35,14 +35,14 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-md-12">
+                        <!-- <div class="col-md-12">
                             <div class="row control-group">
                                 <div class="form-group col-xs-12 controls">
                                     <input type="email" class="form-control" placeholder="Email Address" id="email">
                                     <p class="help-block"></p>
                                 </div>
                             </div>
-                        </div>
+                        </div> -->
                     </div>
                     <div class="row control-group">
                         <div class="form-group col-xs-12  controls">
@@ -61,17 +61,17 @@
                            <p class="help-block"></p>
                        </div>
                    </div> -->
-                    <div class="row control-group">
+                    <!-- <div class="row control-group">
                         <div class="form-group col-xs-12 controls">
                             <textarea rows="5" class="form-control" placeholder="Message" id="message"></textarea>
                             <p class="help-block"></p>
                         </div>
-                    </div>
+                    </div> -->
                     <br>
                     <div id="success"></div>
                     <div class="row">
                         <div class="form-group col-xs-12 text-right">
-                            <button type="submit" class="btn btn-white btn-lg">Tell me more!</button>
+                            <button type="submit" class="btn btn-white btn-lg">Claim!</button>
                         </div>
                     </div>
                 </form>
