--- a/src/html/pages/index.hbs
+++ b/src/html/pages/index.hbs
@@ -52,9 +52,9 @@ pageid: "home"
                     <p class="text-center"><img src="img/boys.jpg" class="img-responsive"></p>
                     <p>Movement Martial Arts is a martial arts gym and club based in Sydney which provides classes and coaching specialising in Brazilian Jiu Jitsu (BJJ), Muay Thai Kickboxing, and Mixed Martial Arts (MMA). We offer classes and training to suit ages 6+, for people of all sizes and skill levels.
                     </p>
-                    <p>Find out more about <a href="">our culture</a></p><!-- links can be inline, no need to refer to navigation -->
+                    <!-- <p>Find out more about <a href="">our culture</a></p> --><!-- links can be inline, no need to refer to navigation -->
                     <div class="space-20"></div>
-                    <p><a href="#portfolio" class="btn btn-lg btn-theme-bg">Want a free trial?<!-- Claim your free trial! --></a></p><!-- http://blog.wishpond.com/post/103290853633/the-25-best-words-to-use-in-your-call-to-action - Make your call-to-action convey urgency -->
+                    <p><a href="#" class="btn btn-lg btn-theme-bg" data-toggle="modal" data-target="#freetrial">Want a free trial?<!-- Claim your free trial! --></a></p><!-- http://blog.wishpond.com/post/103290853633/the-25-best-words-to-use-in-your-call-to-action - Make your call-to-action convey urgency -->
                 </div>
             </div>
             <div class="col-md-4">
@@ -64,7 +64,7 @@ pageid: "home"
                     <p>BJJ is a combat sport and a self-defence system that focuses on grappling and ground fighting, emphasising position, control and submissions such as chokes, arm locks and leg locks.</p>
                     <p>Our head coaches have many years of experience in both coaching and competition, so come join our BJJ classes!</p>
                     <div class="space-20"></div>
-                    <p><a href="#portfolio" class="btn btn-lg btn-theme-bg">What makes BJJ special?</a></p>
+                    <p><a href="timetable.html#header-bjj" class="btn btn-lg btn-theme-bg">Check our schedule</a></p>
                 </div>
             </div>
             <div class="col-md-4">
@@ -73,7 +73,7 @@ pageid: "home"
                     <p class="text-center"><img src="img/kick.jpg" class="img-responsive"></p>
                     <p>Muay Thai is a style of kickboxing that originates from Thailand and uses the whole body. It is referred to as the art of 8 limbs, incorporating hands, elbows, feet, knees and grappling into a comprehensive and effective striking based martial art.</p>
                     <p>Come along to a class and see for yourself why this one is our most popular.</p>
-                    <p><a href="#testimonials" class="btn btn-lg btn-theme-bg">Why learn Muay Thai?</a></p>
+                    <p><a href="timetable.html#header-mma" class="btn btn-lg btn-theme-bg">Check our schedule</a></p>
                 </div>
             </div>
             <!-- <div class="col-md-4">
@@ -120,5 +120,3 @@ pageid: "home"
         </div>
     </div>
 </section>
-<!-- Modals - placed here to avoid position relative weirdness -->
-{{> modals}}
