--- a/src/html/partials/global-nav.hbs
+++ b/src/html/partials/global-nav.hbs
@@ -6,11 +6,11 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
         </button>
-        <a href="#" class="navbar-left hidden-sm visible-md-block visible-lg-block"><img src="img/logo-nav.png"></a>
+        <a href="/" class="navbar-left hidden-sm visible-md-block visible-lg-block"><img src="img/logo-nav.png"></a>
         <ul class="nav navbar-nav navbar-right navbar-social">
             <!-- TO-DO popovers for icons? -->
-            <li><a href="tel:(02) 9887 1230"><i class="glyphicon glyphicon-phone-alt hidden-lg"></i></a></li>
-            <li><a href="#phonenumber" class="js-smooth-link"><i class="glyphicon glyphicon-phone-alt hidden-sm"></i></a></li>
+            <li class="visible-xs-block"><a href="tel:(02) 9887 1230"><i class="glyphicon glyphicon-phone-alt"></i></a></li>
+            <li class="hidden-xs"><a href="#phonenumber" class="js-smooth-link"><i class="glyphicon glyphicon-phone-alt"></i></a></li>
             <li><a href="#map"><i class="glyphicon glyphicon-map-marker"></i></a></li>
 <!--             <li><a href="#freetrial" data-toggle="modal" data-target="#freetrial"><i class="glyphicon glyphicon-gift"></i></a></li> -->
         </ul>
